--- a/Front_End/pages/customer.html
+++ b/Front_End/pages/customer.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--    http:://localhost:8080/pos_one/pages/customer.html-->
-<!--    http:://localhost:8080/pos_one/pages/customer-->
-
-<!--    http:://localhost:8080/pos_one/pages/customer-->
     <meta charset="UTF-8">
     <title>Customer Manage</title>
     <meta content="width=device-width initial-scale=1" name="viewport">
@@ -19,15 +15,17 @@
     </style>
 </head>
 <body>
+
 <!--header-->
 <header class="jumbotron bg-primary text-white p-3">
     <h1 class="position-absolute" id="nav"></h1>
     <ul class="list-group list-group-horizontal text-danger justify-content-end font-weight-bold">
         <li class="list-group-item bg-white" id="lnkHome"><a href="../index.html">Home</a></li>
-        <li class="list-group-item bg-danger text-white" id="lnkCustomer"><a class="text-white" href="customer.html">Customer</a>
+        <li class="list-group-item bg-danger" id="lnkCustomer"><a class="text-white" href="customer.html">Customer</a>
         </li>
         <li class="list-group-item bg-white" id="lnkItem"><a href="item.html">Item</a></li>
-        <li class="list-group-item bg-white" id="lnkOrders"><a href="purchase-order.html">Orders</a></li>
+        <li class="list-group-item bg-white" id="lnkOrders"><a href="orders.html">Orders</a></li>
+        <li class="list-group-item bg-white" id="lnkPlaceOrders"><a href="purchase-order.html">Place Order</a></li>
     </ul>
 </header>
 
@@ -39,7 +37,7 @@
             <form id="customerForm">
                 <div class="form-group">
                     <label for="txtCustomerID">Customer ID</label>
-                    <input name="cusID" class="form-control" id="txtCustomerID"  type="text">
+                    <input name="cusID" class="form-control" id="txtCustomerID" type="text">
                     <span class="control-error" id="lblcusid"></span>
                 </div>
                 <div class="form-group">
@@ -52,17 +50,19 @@
                     <input name="cusAddress" class="form-control" id="txtCustomerAddress" type="text">
                     <span class="control-error" id="lblcusaddress"></span>
                 </div>
-                <!--<div class="form-group">
-                    <label for="txtCustomerSalary">Customer Salary</label>
-                    <input name="cusSalary" class="form-control" id="txtCustomerSalary" type="text">
-                    <span class="control-error" id="lblcussalary"></span>
-                </div>-->
+
                 <div class="btn-group">
-                    <button type="button" class="btn btn-primary" id="btnCustomer" >Save Customer</button>
-                    <button  type="button" class="btn btn-danger" id="btnCusDelete" >Remove</button>
-                    <button  type="button" class="btn btn-warning" id="btnUpdate" >Update</button>
+                    <button type="button" class="btn btn-primary" id="btnCustomer">
+                        Save Customer
+                    </button>
+                    <button type="button" class="btn btn-danger"
+                            id="btnCusDelete">Remove
+                    </button>
+                    <button type="button" class="btn btn-warning"
+                            id="btnUpdate">Update
+                    </button>
                     <button type="button" class="btn btn-success" id="btnGetAll">Get All</button>
-                    <button type="button" class="btn btn-danger" id="btn-clear1">Clear All</button>
+                    <button type="button" class="btn btn-danger" id="btnClear">Clear All</button>
                 </div>
             </form>
         </div>
@@ -75,14 +75,7 @@
                     <th>Customer Address</th>
                 </tr>
                 </thead>
-
-                <tr id="loader" style="display: none; text-align: center"  >
-                    <td colspan="4">
-                        <h1 style="color: red; font-family: Century">Loading.....!</h1>
-                    </td>
-                </tr>
                 <tbody id="tblCustomer">
-
 
                 </tbody>
             </table>
@@ -90,151 +83,9 @@
     </section>
 </main>
 
+<script src="../assets/js/frameworks/jquery-3.6.1.min.js"></script>
+<script src="../Controller/CustomerController.js"></script>
+<script src="../assets/js/frameworks/bootstrap.min.js"></script>
 
-<script src="../assets/js/jquery-3.6.1.min.js"></script>
-<script src="../assets/js/bootstrap.min.js"></script>
-
-<script>
-
-
-    getAll();
-/*<!--    bind row function  -->*/
-
-    function bindRowClickOnAction() {
-        $("#tblCustomer>tr").click(function () {
-
-            let id = $(this).children(":eq(0)").text();
-            let name = $(this).children(":eq(1)").text();
-            let address = $(this).children(":eq(2)").text();
-
-            $("#txtCustomerID").val(id);
-            $("#txtCustomerName").val(name);
-            $("#txtCustomerAddress").val(address);
-
-        });
-
-    }
-
-/*<!--    clear row function  -->*/
-
-    function clearRow(id,name,address) {
-        $("#txtCustomerID").val(id);
-        $("#txtCustomerName").val(name);
-        $("#txtCustomerAddress").val(address);
-    }
-
-<!--    get all function  -->
-    function getAll() {
-        $("#loader").css('display','block');
-        $("#tblCustomer").empty();
-        $.ajax({
-            url : "http://localhost:8080/App/pages/customer",
-            success : function (customer) {
-                $("#loader").css('display','none');
-                for (let i in customer) {
-                    let cus=customer[i];
-                    let id=cus.id;
-                    let name=cus.name;
-                    let address = cus.address;
-
-                    console.log(id,name,address);
-
-                    let row = `<tr><td>${id}</td><td>${name}</td><td>${address}</td></tr>`;
-                    $("#tblCustomer").append(row);
-                }
-                bindRowClickOnAction();
-                clearRow("","","");
-
-            },
-            error: function(error){
-                console.log(error)
-            }
-        });
-
-    }
-
-    $("#btnGetAll").click(function () {
-
-        getAll();
-    });
-
-
-<!--    Save function  -->
-
-$("#btnCustomer").click(function () {
-
-
-    let formData = $("#customerForm").serialize();
-    $.ajax({
-        url:"http://localhost:8080/App/pages/customer",
-        method:"post",
-        data:formData,
-        success:function (res) {
-
-            alert(
-                res.message
-            );
-            getAll();
-        },
-        error:function (error) {
-            alert(JSON.parse(error.responseText).message)
-        }
-    });
-
-});
-
-<!--    Update function  -->
-$("#btnUpdate").click(function () {
-
-    let cusId = $("#txtCustomerID").val();
-    let cusName = $("#txtCustomerName").val();
-    let cusAddress = $("#txtCustomerAddress").val();
-
-    var customerDB={
-        id:cusId,
-        name:cusName,
-        address:cusAddress
-    }
-    $.ajax({
-        url:"http://localhost:8080/App/pages/customer",
-        method:"put",
-        data:JSON.stringify(customerDB),
-        contentType:"application/json",
-        success:function (res) {
-
-            alert(
-                res.message
-            );
-            getAll();
-        },
-        error:function (error) {
-            alert(JSON.parse(error.responseText).message)
-        }
-
-    });
-
-});
-
-<!--    Delete function  -->
-
-    $("#btnCusDelete").click(function () {
-        let id = $("#txtCustomerID").val();
-        $.ajax({
-            url: "http://localhost:8080/App/pages/customer?id=" + id,
-            method: 'delete',
-            success: function (res) {
-                getAll();
-                alert(
-                    res.message
-                );
-            },
-            error:function (error) {
-                alert(JSON.parse(error.responseText).message)
-            }
-        });
-
-    });
-
-</script>
 </body>
 </html>
